Fixing content overlapping modal

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ body,
   position: relative;
 }
 
+#root {
+  position: relative;
+  z-index: 1;
+}
+
 body {
   margin: 0;
   font-family: 'Ropa Sans', sans-serif;
